Fixed nav menu on mobile issue

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -2,15 +2,9 @@
 @import 'fonts';
 
 #header {
-    padding: 58px 0 40px 0;
-    text-align: left;
+    padding: 30px 0 0;
+    text-align: center;
     border-bottom: 1px solid $grey3;
-    position: relative;
-
-    @media screen and (max-width: $tablet) {
-        padding: 30px 0 0;
-        text-align: center;
-    }
 
     .link {
         font-size: 2.375rem;
@@ -36,15 +30,10 @@
     }
 
     nav-menu {
-        margin: 10px 0 -1px;
+        margin: 20px 0 -1px;
         padding: 0;
-        position: absolute;
-        right: 0;
-        bottom: 0;
-
-        @media screen and (max-width: $tablet) {
-            position: relative;
-        }
+        display: flex;
+        justify-content: space-evenly;
 
         a {
             display: inline-block;
